# temp-sensor

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  mcp9808.rs  measurement.rs
src/registers/: device_id.rs  manuf_id.rs  mod.rs  register.rs  resolution.rs  temperature.rs
